# napari-meisenmeister

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.napari-hub/: DESCRIPTION.md
src/napari_meisenmeister/: __init__.py  inference.py  napari.yaml  widget_gui.py  widget_main.py
